using string resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="label_edit_debtor">Editar deudor</string>
     <string name="title_empty_content">Todavía no hay ningún deudor.</string>
     <string name="label_empty_content">Pulsa “+” para  llevar el control del tu cobranza</string>
+    <string name="no_movements">Sin movimientos</string>
+    <string name="add_a_movement">Agrega un Pago un Aumento</string>
 </resources>
