--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="title_empty_content">Todavía no hay ningún deudor.</string>
     <string name="label_empty_content">Pulsa “+” para  llevar el control del tu cobranza</string>
     <string name="no_movements">Sin movimientos</string>
-    <string name="add_a_movement">Agrega un Pago un Aumento</string>
+    <string name="add_a_movement">Agrega un Pago o un Aumento</string>
     <string name="title_dialog_delete_debtor">¿Estás seguro que quieres eliminar este deudor?</string>
     <string name="text_dialog_delete_debtor">Esta acción no se puede deshacer</string>
     <string name="delete">Eliminar</string>
