modified text colors on HomeScreen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="amount">Monto</string>
     <string name="confirm">Confirmar</string>
     <string name="accept">Aceptar</string>
+    <string name="movements">Movimientos</string>
 </resources>
