--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="accept">Aceptar</string>
     <string name="movements">Movimientos</string>
     <string name="label_share_pdf">Compartir PDF</string>
+    <string name="paid_label">Pagado</string>
 </resources>
